--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-torch==1.5.1
-torchvision==0.6.1
-scikit-learn==0.22.2.post1
-numpy==1.18.5
-scipy==1.4.1
-gym==0.17.2
-joblib==0.14.1
-tensorboard==2.2.2
-tabulate==0.8.7
-pygame==1.9.6
-matplotlib==3.0.3
+torch
+scikit-learn
+numpy
+scipy
+gym
+joblib
+tensorboard
+tabulate
+pygame
+matplotlib
